# manager-assist

./: .dockerignore  .env.example  .gitignore  README.md  architecture.md  assistant.py  configuration.py  docker-compose.yml  langgraph.json  pyproject.toml  schema.sql  start.ps1  utilities.py
chains/general/: intent_classifier.py  response_shaper.py  url_detector.py
chains/general/tests/: general_chains_test.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  package.json
frontend/src/app/: layout.tsx
frontend/src/app/api/[..._path]/: route.ts
frontend/src/components/thread/: index.tsx
frontend/src/providers/: Thread.tsx
graph/: state.py
graph/retrieve/: retrive_state.py  retriver_graph.py
graph/retrieve/chains/: retrieval_precheck_gate.py
graph/retrieve/chains/tests/: test_retrieval_chains.py
graph/retrieve/graph/: graph.py
graph/retrieve/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py
graph/retrieve/graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
graph/retrieve/nodes/: agentic_rag_retriver.py  llm_node.py  retreive_graph_gate.py
graph/save/: constants.py  graph.py  mermaid.txt  save_graph_state.py
graph/save/chains/: normalize.py  save_milvus.py  save_postgres.py  storage_decision.py
graph/save/chains/tests/: save_chains_test.py
graph/save/nodes/: normalization.py  save_milvus.py  save_postgres.py  storage_decision.py
nodes/: intent_classifier_node.py  response_shaper.py  retrieve_node.py  save_node.py
(+2 files in other folders)
