[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.3.3",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.16",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "psycopg2-binary>=2.9.11",
    "pymilvus>=2.6.6",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
include = ["chains*", "graph*", "nodes*"]
